services/proxmox/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: default
spec:
  ports:
  - port: 8006
    targetPort: 8006
    protocol: TCP
    name: https
  clusterIP: None  # Headless service
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.4.170
    ports:
    - port: 8006
      name: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`proxmox.krockysphere.com`)
    kind: Rule
    services:
    - name: proxmox-external
      port: 8006
      scheme: https
      serversTransport: proxmox-transport
