services/proxmox/proxmox-internal.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-internal
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`proxmox.internal`)
    kind: Rule
    services:
    - name: proxmox-external
      port: 8006
      scheme: https
      serversTransport: proxmox-transport
